2007-04-03  Roman Kennke  <roman@kennke.org>

	* java/nio/ByteOrder.java
	(nativeByteOrder): Let this fail when the corresponding
	property is not set properly.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(getPathBounds): Consider the tree's insets. Added a bunch of
	null checks.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicLabelUI.java
	(cachedInsets): New field. Used for reusing the insets instance.
	(getFontMetrics): New helper method for fetching a suitable
	FontMetrics object.
	(getPreferredSize): Use new helper method for font metrics.
	(paint): Only do something if we have an icon or text.
	Use cached Insets instance and new font metrics helper.
	(paintDisabledText): Don't restore the graphics' color.
	(paintEnabledText): Don't restore the graphics' color.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalButtonUI.java
	(paintButtonPressed): Fill the whole button not only visibleRect.
	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(LAF_defaults): Removed.
	(getDefaults): Always fetch super's defaults.
	* javax/swing/plaf/metal/MetalMenuBarUI.java
	(update): Don't leave 2 pixel gap.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* native/target/.cvsignore,
	* native/target/Linux/.cvsignore,
	* native/target/generic/.cvsignore: Some new ignores.

2007-04-03  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/peer/gtk/GThreadMutex.java,
	* gnu/java/awt/peer/gtk/GThreadNativeMethodRunner.java,
	* include/gnu_java_awt_peer_gtk_GThreadNativeMethodRunner.h,
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GThreadNativeMethodRunner.c,
	* native/jni/gtk-peer/gthread-jni.c,
	* native/jni/gtk-peer/gthread-jni.h: Removed.
	* native/jni/gtk-peer/Makefile.am: Removed obsolete entries
	for removed files.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c
	Removed unused bits from gthread-jni.c.
	
2007-04-03  Francis Kung  <fkung@redhat.com>
